--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container inthemiddle">
             <div class="brand hidden-xs col-sm-5 col-md-3 col-lg-3">
                 <a class="navbar-brand" href="/">
-                    <img src="src/ppologo.png" alt="Компания РусЭксперт">
+                    <img src="src/ppologo.png" alt="Компания ЮрЭксперт">
                 </a>
             </div>
             <div class="col-md-5 col-lg-5 adress hidden-xs hidden-sm">
@@ -109,13 +109,13 @@
     <section class="content index">
         <div class="index-screen">
             <div class="container">
-                <h1 class="text-center"><strong>Получите бесплатную консультация автоюриста</strong></h1>
+                <h1 class="text-center"><strong>Получите бесплатную консультацию автоюриста</strong></h1>
 
                 <div id="article">
                     <div id="quote_wrap">
-                        <blockquote style="display: none;">
+                        <blockquote style="display: none;" style="height: 90px;">
                             <p class="h2 text-center">
-                                <font>Возмещаем ущерб от ДТП за 1 день</font>
+                                <font>Возмещаем ущерб от ДТП за 1 день </font>
                             </p>
                         </blockquote>
                         <blockquote style="display: none;">
@@ -130,17 +130,12 @@
                         </blockquote>
                         <blockquote style="display: none;">
                             <p class="h2 text-center">
-                                <font>Обжалуем любые отказы в выплате страховки</font>
+                                <font>Доплачиваем сумму если страховая не доплатила</font>
                             </p>
                         </blockquote>
                         <blockquote style="display: none;">
                             <p class="h2 text-center">
-                                <font>Проводим честную экспертизу обстоятельств ДТП</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Эффективно работаем по спорам о вине в ДТП</font>
+                                <font>Считаем максимум по КАСКО и ОСАГО</font>
                             </p>
                         </blockquote>
                         <blockquote style="display: none;">
@@ -148,21 +143,16 @@
                                 <font>Эффективно разрешаем любые автопроблемы</font>
                             </p>
                         </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Считаем честный максимум по КАСКО и ОСАГО</font>
-                            </p>
-                        </blockquote>
                     </div>
                 </div>
                 <!--h1 class="text-center"><strong>Получите страховое возмещение после ДТП по ОСАГО или КАСКО</strong>
                     <p class="h2 text-center">через 24 часа после нашей бесплатной экспресс-оценки</p-->
                 <div class="row money24">
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 mobile-center text-center">
+                    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 mobile-center text-center">
                         <!--p class="text-center">Мы перезвоним вам через 5 минут и подробно проконсультируем</p-->
                         <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center" onsubmit="yaCounter48446306.reachGoal('CLICK_CALC');fbq('track', 'Lead');">
                             <!--h3 class="text-center">Расчитать выплату</h3-->
-                            <p class="text-center" style="color:#DC271E;"><strong>Если загрузите фото мы скажем вам сумму выплаты через 15 минут</strong></p>
+                            <p class="text-center" style="color:#DC271E;"><strong>Загрузите фото и мы скажем сумму выплаты через 30 минут</strong></p>
                             <!--label for="nameFF">Имя:</label-->
                             <input type="text" name="nameFF" id="nameFF" required placeholder="Имя, например: Иван Иванович" x-autocompletetype="name" class="w100 border">
                             <!--label for="contactFF">Телефон:</label-->
@@ -175,7 +165,7 @@
                             <input value="Бесплатная консультация" type="submit" id="submitFF" class="btn btn-primary">
                         </form>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-lg-offset-1 text-center">
+                    <!--div class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-lg-offset-1 text-center">
                         <h2><a data-toggle="modal" data-target="#mySignup">Мы подскажем как</a></h2>
                         <div class="p_tags">
                             <p> — Возместить ущерб от ДТП за 24 часа
@@ -184,7 +174,7 @@
                                 <br> — Проведем бесплатную диагностику
                             </p>
                         </div>
-                    </div>
+                    </div-->
                 </div>
             </div>
         </div>
@@ -261,19 +251,19 @@
                     <div class="title-line"></div>
                 </div>
                 <div class="row text-center padding_num_comp">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="outline: 2pt solid;outline-offset:-20px;">
                         <h3>
                             <div id="years"></div>
                         </h3>
                         <p class="h5 companyInFigure_desc">оказываем помощь<br>пострадавшим в ДТП</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="outline: 2pt solid;outline-offset:-20px;">
                         <h3>
                             <div id="employees"></div>
                         </h3>
                         <p class="h5 companyInFigure_desc">сотрудников<br>компании</p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="outline: 2pt solid;outline-offset:-20px;">
                         <h3>
                             <div style="display: inline-flex;">
                                 <div id="clients1"></div>&nbsp;
@@ -346,6 +336,8 @@
                 </div>
             </div>
         </div>
+
+
         <a name="h2_doc"></a>
         <!--Документы-->
         <div class="color">
@@ -374,21 +366,22 @@
             </div>
         </div>
 
-        <!--div class="white">
+
+        <div class="white">
             <div class="container">
                 <div class="col-md-6 col-md-offset-3 title">
-                    <h2><strong>Наш адрес в Уфе</strong>
+                    <h2><strong>Наши контакты</strong>
                     </h2>
                     <div class="title-line"></div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
-                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af384447fcfe6aef571f838e6b1af12dc2f8690992812fd210347c03850675275&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3cdc7cbe0a021c4564254d978defb8afb8f6dc7168bd8b092ea4f98cfb4bc884&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=true"></script>
                     </div>
                 </div>
             </div>
 
-        </div-->
+        </div>
 
 
 
@@ -418,7 +411,7 @@
         </div-->
 
         <div class="footer-copyright py-3 text-center">
-            <a href="/politica.html" target="blank_">Политика конфиденциальности персональных данных</a><br> «РусЭксперт» © 2011 -
+            <a href="/politica.html" target="blank_">Политика конфиденциальности персональных данных</a><br> «ЮрЭксперт» © 2011 -
             <script type="text/javascript">
                 document.write(new Date().getFullYear());
             </script>. Все права защищены.
@@ -438,7 +431,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel">Консультация эксперта</h4>
+                    <h4 class="modal-title" id="myModalLabel">Заказать звонок</h4>
                 </div>
                 <div class="modal-body"><iframe name="fff" style="opacity:0;width:0;height:0;float:right;position:absolute;" src="saved_resource.html"></iframe>
                     <iframe name="ggg" style="opacity:0;width:0;height:0;float:right;position:absolute;" src="saved_resource(1).html"></iframe>
