--- a/index_doplata.html
+++ b/index_doplata.html
@@ -89,6 +89,40 @@
                     тел:
                     <a href="tel:+7 982 370 30 90">+7 982 370 30 90</a>
                 </p-->
+                <div id="article">
+                    <div id="quote_wrap">
+                        <blockquote style="display: none;" style="height: 90px;">
+                            <p class="text-center">
+                                <font>Возмещаем ущерб от ДТП за 1 день </font>
+                            </p>
+                        </blockquote>
+                        <blockquote style="display: none;">
+                            <p class="text-center">
+                                <font>Выкупаем долги страховых компаний по КАСКО и ОСАГО</font>
+                            </p>
+                        </blockquote>
+                        <blockquote style="display: none;">
+                            <p class="text-center">
+                                <font>Быстро оцениваем реальный ущерб от ДТП</font>
+                            </p>
+                        </blockquote>
+                        <blockquote style="display: none;">
+                            <p class="text-center">
+                                <font>Доплачиваем сумму если страховая не доплатила</font>
+                            </p>
+                        </blockquote>
+                        <blockquote style="display: none;">
+                            <p class="text-center">
+                                <font>Считаем максимум по КАСКО и ОСАГО</font>
+                            </p>
+                        </blockquote>
+                        <blockquote style="display: none;">
+                            <p class="text-center">
+                                <font>Эффективно разрешаем любые автопроблемы</font>
+                            </p>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
             <div class="col-xs-12 col-sm-5 col-md-3 col-lg-3 action">
                 <!--a class="btn btn-primary hidden-xs" href="/consultasia">Оставить заявку</a-->
@@ -109,46 +143,10 @@
     <section class="content index">
         <div class="index-screen">
             <div class="container">
-                <h1 class="text-center"><strong>Получите бесплатную консультацию автоюриста</strong></h1>
-
-                <div id="article">
-                    <div id="quote_wrap">
-                        <blockquote style="display: none;" style="height: 90px;">
-                            <p class="h2 text-center">
-                                <font>Возмещаем ущерб от ДТП за 1 день </font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Выкупаем долги страховых компаний по КАСКО и ОСАГО</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Быстро оцениваем реальный ущерб от ДТП</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Доплачиваем сумму если страховая не доплатила</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Считаем максимум по КАСКО и ОСАГО</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Эффективно разрешаем любые автопроблемы</font>
-                            </p>
-                        </blockquote>
-                    </div>
-                </div>
-                <!--h1 class="text-center"><strong>Получите страховое возмещение после ДТП по ОСАГО или КАСКО</strong>
-                    <p class="h2 text-center">через 24 часа после нашей бесплатной экспресс-оценки</p-->
+                <h1 class="text-center"><strong>Страховая выплатила мало?</strong></h1>
+                <p class="h2 text-center">Мы скажем Вам реальную стоимость ремонта через 30 минут</p>
                 <div class="row money24">
-                    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 mobile-center text-center">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mobile-center text-center">
                         <!--p class="text-center">Мы перезвоним вам через 5 минут и подробно проконсультируем</p-->
                         <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center" onsubmit="yaCounter48446306.reachGoal('CLICK_CALC');fbq('track', 'Lead');">
                             <!--h3 class="text-center">Расчитать выплату</h3-->
@@ -165,17 +163,10 @@
                             <input value="Бесплатная консультация" type="submit" id="submitFF" class="btn btn-primary">
                         </form>
                     </div>
-                    <!--div class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-lg-offset-1 text-center">
-                        <h2><a data-toggle="modal" data-target="#mySignup">Мы подскажем как</a></h2>
-                        <div class="p_tags">
-                            <p> — Возместить ущерб от ДТП за 24 часа
-                                <br>— Как получить 100% выплату по ОСАГО или КАСКО
-                                <br> — Оценим ущерб по интернету
-                                <br> — Проведем бесплатную диагностику
-                            </p>
-                        </div>
-                    </div-->
+                    <div class="hidden-xs hidden-sm col-md-6 col-lg-5 col-lg-offset-1 text-center myVideo">
+                    </div>
                 </div>
+
             </div>
         </div>
 
