--- a/politica.html
+++ b/politica.html
@@ -59,7 +59,7 @@
 
         <p><strong>1.1 В настоящей Политике конфиденциальности используются следующие термины:<strong></p>
 		
-		<p>1.1.1. «<strong>Администрация сайта</strong>» (далее – Администрация) – уполномоченные сотрудники на управление сайтом <strong>ur-ekspert.ru</strong>, действующие от имени РусЭксперт, которые организуют и (или) осуществляют обработку персональных
+		<p>1.1.1. «<strong>Администрация сайта</strong>» (далее – Администрация) – уполномоченные сотрудники на управление сайтом <strong>ur-ekspert.ru</strong>, действующие от имени ЮрЭксперт, которые организуют и (или) осуществляют обработку персональных
             данных, а также определяет цели обработки персональных данных, состав персональных данных, подлежащих обработке, действия (операции), совершаемые с персональными данными.</p>
 
         <p>1.1.2. «Персональные данные» - любая информация, относящаяся к прямо или косвенно определенному, или определяемому физическому лицу (субъекту персональных данных).</p>
@@ -98,8 +98,8 @@
             на сайте ur-ekspert.ru, при подписке на информационную e-mail рассылку или при оформлении заказа.</p>
 
         <p>3.2. Персональные данные, разрешённые к обработке в рамках настоящей Политики конфиденциальности, предоставляются Пользователем путём заполнения форм на сайте ur-ekspert.ru и включают в себя следующую информацию:<br /> 3.2.1. фамилию, имя, отчество
-            Пользователя;<br /> 3.2.2. контактный телефон Пользователя;<br /> 3.2.3. адрес электронной почты (e-mail)<br /> 3.2.4. место жительство Пользователя (при необходимости)<br /> 3.2.5. адрес доставки Товара (при необходимости) 3.2.6. фотографию
-            (при необходимости).</p>
+            Пользователя;
+            <br /> 3.2.2. контактный телефон Пользователя;<br /> 3.2.3. адрес электронной почты (e-mail)<br /> 3.2.4. место жительство Пользователя (при необходимости)<br /> 3.2.5. адрес доставки Товара (при необходимости) 3.2.6. фотографию (при необходимости).</p>
 
         <p>3.3. сайт защищает Данные, которые автоматически передаются при посещении страниц:<br /> - IP адрес;<br /> - информация из cookies;<br /> - информация о браузере <br /> - время доступа;<br /> - реферер (адрес предыдущей страницы).</p>
 
@@ -201,7 +201,7 @@
         <p>9.4. Действующая Политика конфиденциальности размещена на странице по адресу http://ur-ekspert.ru/politika.html</p>
 
         <p>Обновлено: 13 Апреля 2018 года</p>
-        <p>г. Челябинск, «РусЭксперт», ОГРН 1167456053159</p>
+        <p>г. Челябинск, «ЮрЭксперт», ОГРН 1167456053159</p>
     </div>
 </body>
 
