--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     </script>
     <!-- End Google Tag Manager -->
 
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/social.png">
     <meta itemprop="image" content="/img/social.png">
     <link rel="image_src" href="/img/social.png">
     <link rel="canonical" href="/">
-    <title>Получите возмещение сразу после ДТП без визитов в страховую по ОСАГО или КАСКО</title>
+    <title>Бесплатная консультация автоюриста по ОСАГО и КАСКО тел. 982-370-30-90</title>
     <meta name="description" content="Проводим бесплатную экспресс-оценку ущерба и производим выплату без обращения в страховую. Получите страховое возмещение по ОСАГО или КАСКО на следующий день после ДТП!">
     <meta name="keywords" content="бесплатная оценка ущерба полсе ДТП, получить страховое возмещение, страховое возмещение по ОСАГО и КАСКО">
     <!-- css -->
@@ -44,8 +45,66 @@
     <link href="src/compiled.min.css" rel="stylesheet">
     <link href="src/form.css" rel="stylesheet">
 
-
     <script src="src/jquery.min.js"></script>
+
+    <script src="src/js.cookie.js"></script>
+    <script>
+        multi = "осаго|ущерб;Осаго ущерб?\n\
+        выплаты|дтп;Выплаты дтп?";
+
+        yaParams = {}
+        $(function() {
+
+            function getURLParameter(name) {
+                return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ""])[1].replace(/\+/g, '%20')) || null;
+            }
+
+            // UTM
+            utm = [];
+            $.each(["utm_source", "utm_medium", "utm_campaign", "utm_term", 'source_type', 'source', 'position_type', 'position', 'added', 'creative', 'matchtype'], function(i, v) {
+                utm[v] = getURLParameter(v) || $.cookie(v);
+                $.cookie(v, utm[v], {
+                    expires: 365,
+                    path: '/'
+                });
+                $('<input type="hidden" />').attr({
+                    name: "content[" + v + "]",
+                    value: utm[v]
+                }).appendTo("form");
+            });
+
+            // MULTI
+
+            var ab_title = "default";
+            if (utm['utm_term']) {
+                multi = multi.split('\n');
+                multi = $.map(multi, function(v, i) {
+                    arr1 = v.split(';');
+                    r = new RegExp(arr1[0]);
+                    return {
+                        reg: r,
+                        val: arr1[1]
+                    };
+                });
+                multi = $.grep(multi, function(v, i) {
+                    return utm['utm_term'].search(v.reg) > -1
+                });
+                if (multi[0]) {
+                    ab_title = multi[0].val;
+                    $("h1").html("<strong>" + ab_title + "</strong>");
+                }
+            }
+
+            yaParams = {
+                ab_title: ab_title
+            }
+            try { //если метрика уже была, то тут. Если нет, то в коде метрики.
+                yaCounter.params(yaParams);
+            } catch (e) {}
+
+        });
+    </script>
+
     <script src="src/bootstrap.js"></script>
 
     <script src="src/process.js"></script>
@@ -89,7 +148,45 @@
                     тел:
                     <a href="tel:+7 982 370 30 90">+7 982 370 30 90</a>
                 </p-->
+
+                <div class="box">
+                    <div id="article">
+                        <div id="quote_wrap">
+                            <blockquote style="display: none;" style="height: 90px;">
+                                <p class="text-center">
+                                    <font>Возмещаем ущерб от ДТП за 1 день </font>
+                                </p>
+                            </blockquote>
+                            <blockquote style="display: none;">
+                                <p class="text-center">
+                                    <font>Выкупаем долги страховых компаний по КАСКО и ОСАГО</font>
+                                </p>
+                            </blockquote>
+                            <blockquote style="display: none;">
+                                <p class="text-center">
+                                    <font>Быстро оцениваем реальный ущерб от ДТП</font>
+                                </p>
+                            </blockquote>
+                            <blockquote style="display: none;">
+                                <p class="text-center">
+                                    <font>Доплачиваем сумму если страховая не доплатила</font>
+                                </p>
+                            </blockquote>
+                            <blockquote style="display: none;">
+                                <p class="text-center">
+                                    <font>Считаем максимум по КАСКО и ОСАГО</font>
+                                </p>
+                            </blockquote>
+                            <blockquote style="display: none;">
+                                <p class="text-center">
+                                    <font>Эффективно разрешаем любые автопроблемы</font>
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="col-xs-12 col-sm-5 col-md-3 col-lg-3 action">
                 <!--a class="btn btn-primary hidden-xs" href="/consultasia">Оставить заявку</a-->
                 <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#mySignup">Заказать звонок</a>
@@ -109,46 +206,10 @@
     <section class="content index">
         <div class="index-screen">
             <div class="container">
-                <h1 class="text-center"><strong>Получите бесплатную консультацию автоюриста</strong></h1>
-
-                <div id="article">
-                    <div id="quote_wrap">
-                        <blockquote style="display: none;" style="height: 90px;">
-                            <p class="h2 text-center">
-                                <font>Возмещаем ущерб от ДТП за 1 день </font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Выкупаем долги страховых компаний по КАСКО и ОСАГО</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Быстро оцениваем реальный ущерб от ДТП</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Доплачиваем сумму если страховая не доплатила</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Считаем максимум по КАСКО и ОСАГО</font>
-                            </p>
-                        </blockquote>
-                        <blockquote style="display: none;">
-                            <p class="h2 text-center">
-                                <font>Эффективно разрешаем любые автопроблемы</font>
-                            </p>
-                        </blockquote>
-                    </div>
-                </div>
-                <!--h1 class="text-center"><strong>Получите страховое возмещение после ДТП по ОСАГО или КАСКО</strong>
-                    <p class="h2 text-center">через 24 часа после нашей бесплатной экспресс-оценки</p-->
+                <h1 class="text-center"><strong>Бесплатная консультация автоюриста</strong></h1>
+                <p class="h2 text-center">Мы скажем Вам реальную стоимость ремонта через 30 минут</p>
                 <div class="row money24">
-                    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 mobile-center text-center">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mobile-center text-center">
                         <!--p class="text-center">Мы перезвоним вам через 5 минут и подробно проконсультируем</p-->
                         <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center" onsubmit="yaCounter48446306.reachGoal('CLICK_CALC');fbq('track', 'Lead');">
                             <!--h3 class="text-center">Расчитать выплату</h3-->
@@ -165,17 +226,10 @@
                             <input value="Бесплатная консультация" type="submit" id="submitFF" class="btn btn-primary">
                         </form>
                     </div>
-                    <!--div class="col-xs-12 col-sm-6 col-md-6 col-lg-5 col-lg-offset-1 text-center">
-                        <h2><a data-toggle="modal" data-target="#mySignup">Мы подскажем как</a></h2>
-                        <div class="p_tags">
-                            <p> — Возместить ущерб от ДТП за 24 часа
-                                <br>— Как получить 100% выплату по ОСАГО или КАСКО
-                                <br> — Оценим ущерб по интернету
-                                <br> — Проведем бесплатную диагностику
-                            </p>
-                        </div>
-                    </div-->
+                    <div class="hidden-xs hidden-sm col-md-6 col-lg-5 col-lg-offset-1 text-center myVideo">
+                    </div>
                 </div>
+
             </div>
         </div>
 
